--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   </head>
 
   <body>
+    <div class="intro">
+      <h1>Welcome to my blog!</h1>
+      <p>This blog is all about me cuz I'm the best!</p>
+    </div>
+
+
   </body>
 
   <footer>
