--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   </head>
 
   <body>
+    <div class="menu">
+      <a href="index.html">Home</a>
+      <a href="interests.html">Interests</a>
+    </div>
+
     <div class="intro">
       <h1>Welcome to my blog!</h1>
       <p>This blog is all about me cuz I'm the best!</p>
