--- a/interests.html
+++ b/interests.html
@@ -6,7 +6,10 @@
   </head>
 
   <body>
-    <a href="index.html">Home</a>
+    <div class="menu">
+      <a href="index.html">Home</a>
+      <a href="interests.html">Interests</a>
+    </div>
 
     <div class="intro">
       <h1>Welcome to my blog!</h1>
