--- a/interests.html
+++ b/interests.html
@@ -12,8 +12,14 @@
     </div>
 
     <div class="intro">
-      <h1>Welcome to my blog!</h1>
-      <p>This blog is all about me cuz I'm the best!</p>
+      <h1>These are my interests:</h1>
+      <p>
+        <ul>
+          <li>Frisbee</li>
+          <li>Reading books</li>
+          <li>Listening to music!</li>
+        </ul>
+      </p>
     </div>
 
 
