Add blog entries

--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
       <p>This blog is all about me cuz I'm the best!</p>
     </div>
 
+    <div class="entries">
+      <h3>January 2, 2016</h3>
+      <p>Today I ut eleifend, nulla nec feugiat blandit, purus tortor congue nibh, quis aliquet mauris nisl vitae metus. Praesent magna quam, facilisis sit amet nibh ut, convallis dictum est. Praesent facilisis accumsan ex a sollicitudin. Sed ut pharetra quam, nec congue lectus. Sed suscipit congue ligula, ac molestie orci eleifend eget. Nulla in ante commodo, sagittis massa non, sodales erat.</p>
+    </div>
+
+    <div class="entries">
+      <h3>January 4, 2016</h3>
+      <p>Today I ut eleifend, nulla nec feugiat blandit, purus tortor congue nibh, quis aliquet mauris nisl vitae metus. Praesent magna quam, facilisis sit amet nibh ut, convallis dictum est. Praesent facilisis accumsan ex a sollicitudin. Sed ut pharetra quam, nec congue lectus. Sed suscipit congue ligula, ac molestie orci eleifend eget. Nulla in ante commodo, sagittis massa non, sodales erat.</p>
+    </div>
+
+    <div class="entries">
+      <h3>January 6, 2016</h3>
+      <p>Today I ut eleifend, nulla nec feugiat blandit, purus tortor congue nibh, quis aliquet mauris nisl vitae metus. Praesent magna quam, facilisis sit amet nibh ut, convallis dictum est. Praesent facilisis accumsan ex a sollicitudin. Sed ut pharetra quam, nec congue lectus. Sed suscipit congue ligula, ac molestie orci eleifend eget. Nulla in ante commodo, sagittis massa non, sodales erat.</p>
+    </div>
 
   </body>
 
